--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@arcgis/map-components-react": "^1.0.0-beta.14",
+    "@arcgis/map-components-react": "next",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
